<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/eventsFragment"
        android:icon="@drawable/ic_events"
        android:title="@string/nav_events" />
    <item
        android:id="@+id/venuesFragment"
        android:icon="@drawable/ic_venues"
        android:title="@string/nav_venues" />
    <item
        android:id="@+id/socialFragment"
        android:icon="@drawable/ic_social"
        android:title="@string/nav_social" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>
