<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.enightclub.app.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/eventsFragment"
        android:name="com.enightclub.app.ui.events.EventsFragment"
        android:label="@string/nav_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/venuesFragment"
        android:name="com.enightclub.app.ui.venues.VenuesFragment"
        android:label="@string/nav_venues"
        tools:layout="@layout/fragment_venues" />

    <fragment
        android:id="@+id/socialFragment"
        android:name="com.enightclub.app.ui.social.SocialFragment"
        android:label="@string/nav_social"
        tools:layout="@layout/fragment_social" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.enightclub.app.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
