<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".ui.events.EventsFragment">

    <!-- Top Bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/spacing_base"
        android:paddingEnd="@dimen/spacing_base"
        android:paddingTop="@dimen/spacing_xxl"
        android:paddingBottom="@dimen/spacing_base"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/events_title"
            android:textAppearance="@style/TextAppearance.ENightClub.Heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="24 events near you"
            android:textAppearance="@style/TextAppearance.ENightClub.Body.Secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleText" />

        <ImageButton
            android:id="@+id/filterBtn"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@drawable/bg_card_dark"
            android:src="@drawable/ic_bar_chart"
            android:padding="10dp"
            android:contentDescription="@string/cd_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Search Bar -->
    <androidx.cardview.widget.CardView
        android:id="@+id/searchCard"
        style="@style/Widget.ENightClub.SearchBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_bar_height"
        android:layout_marginStart="@dimen/spacing_base"
        android:layout_marginEnd="@dimen/spacing_base"
        app:layout_constraintTop_toBottomOf="@id/topBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/spacing_base"
            android:paddingEnd="@dimen/spacing_base">

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/events_search"
                android:textAppearance="@style/TextAppearance.ENightClub.Caption.Tertiary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/searchIcon"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- Filter Chips -->
    <HorizontalScrollView
        android:id="@+id/filterChipsScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingStart="@dimen/spacing_base"
        android:paddingEnd="@dimen/spacing_base"
        android:scrollbars="none"
        android:layout_marginTop="@dimen/spacing_md"
        app:layout_constraintTop_toBottomOf="@id/searchCard">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/filterChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSpacingHorizontal="8dp"
            app:singleLine="true"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAll"
                style="@style/Widget.ENightClub.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/events_filter_all"
                android:checked="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipToday"
                style="@style/Widget.ENightClub.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/events_filter_today" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipThisWeek"
                style="@style/Widget.ENightClub.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/events_filter_this_week" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipThisMonth"
                style="@style/Widget.ENightClub.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/events_filter_this_month" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <!-- Events List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/eventsRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="@dimen/spacing_base"
        android:paddingEnd="@dimen/spacing_base"
        android:paddingTop="@dimen/spacing_md"
        android:paddingBottom="@dimen/spacing_base"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterChipsScroll"
        tools:itemCount="6"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_event_card" />

</androidx.constraintlayout.widget.ConstraintLayout>
